# CANBridge

./: .gitignore  CANFrame.cpp  CANFrame.h  CMakeLists.txt  Info.plist.in  README.md  aboutdialog.cpp  aboutdialog.h  framefilterproxymodel.h  main.cpp  mainwindow.cpp  mainwindow.h  messagemodel.cpp  messagemodel.h  tcpclient.cpp  tcpclient.h  tcpserver.cpp  tcpserver.h  version.rc.in
.github/workflows/: build.yml
resources/: logo.icns  resources.qrc
src/: version.h.in
src/core/: CANFrame.cpp  CANFrame.h
src/models/: framefilterproxymodel.cpp  messagemodel.cpp  messagemodel.h
src/network/: tcpclient.cpp  tcpclient.h  tcpserver.cpp  tcpserver.h
src/ui/: aboutdialog.cpp  framewidget.cpp  framewidget.h  mainwindow.cpp  mainwindow.h  mainwindow_menubar.cpp
